--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,4 @@
-* {margin: 0; box-sizing: border-box;}
+* {margin: 0 auto; box-sizing: border-box;}
 
 body{
     background: #FDEBD0;
@@ -7,7 +7,8 @@ body{
 }
 
 main{
-    margin: auto 20px;
+    margin: 10px auto 150px auto;
+    width: 600px;
 }
 
 main p{
@@ -18,4 +19,25 @@ main h2{
     margin: 10px 0 0 0;
     font-size: 1.1rem;
     font-weight: bold;
+}
+
+div#me{
+    width: 100%;
+    text-align: center;
+}
+
+img{
+    min-width: 300px;
+    height: 300px;
+    margin: 10px;
+}
+
+body{
+    margin: 0 auto;
+}
+
+h2.about{
+    margin: 0 auto;
+    width: 100%;
+    text-align: center;
 }
