--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,7 @@
 * {margin: 0 auto; box-sizing: border-box;}
 
 body{
-    background: #FDEBD0;
+    background: white;
     font-family: 'Handlee', cursive;
     color: #93572D;
 }
