--- a/styles/instruction.css
+++ b/styles/instruction.css
@@ -1,6 +1,9 @@
-* {margin: 0; box-sizing: border-box;}
+* {
+    margin: 0;
+    box-sizing: border-box;
+}
 
-body{
+body {
     background: #FDEBD0;
     font-family: 'Handlee', cursive;
 }
