--- a/styles/preparation.css
+++ b/styles/preparation.css
@@ -78,3 +78,14 @@ h2.about {
 ::-webkit-scrollbar-thumb:hover {
     background: black;
 }
+
+.images{
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+}
+
+.images img{
+    width: 100%;
+    margin: 0;
+}
