--- a/styles/health.css
+++ b/styles/health.css
@@ -7,3 +7,13 @@ body {
     background: #FDEBD0;
     font-family: 'Handlee', cursive;
 }
+
+.images{
+    display: flex;
+    flex-direction: column;
+}
+
+.images img{
+    width: 100%;
+    margin: 10px 0;
+}
