--- a/styles/index.css
+++ b/styles/index.css
@@ -62,3 +62,13 @@ h2.about {
 ::-webkit-scrollbar-thumb:hover {
     background: black;
 }
+
+.images{
+    display: flex;
+    flex-direction: column;
+}
+
+.images img{
+    width: 100%;
+    margin: 10px 0;
+}
