--- a/styles/index.css
+++ b/styles/index.css
@@ -11,7 +11,7 @@ body {
 
 main {
     margin: 10px auto 150px auto;
-    width: 600px;
+    width: 300px;
 }
 
 main p {
@@ -71,4 +71,16 @@ h2.about {
 .images img{
     width: 100%;
     margin: 10px 0;
+}
+
+@media only screen and (min-width: 600px) {
+
+    main{
+        width: 600px;
+    }
+
+}
+
+@media only screen and (min-width: 1000px) {
+    
 }
