--- a/styles/index.css
+++ b/styles/index.css
@@ -4,9 +4,9 @@
 }
 
 body {
-    background: white;
+    background: rgb(252, 240, 244);
     font-family: 'Handlee', cursive;
-    color: #93572D;
+    color: rgb(65, 43, 61);
 }
 
 main {
@@ -32,7 +32,7 @@ div#me {
 
 img {
     min-width: 300px;
-    height: 300px;
+    height: 350px;
     margin: 10px;
 }
 
