--- a/styles/header.css
+++ b/styles/header.css
@@ -1,7 +1,7 @@
 header {
     padding: 40px 0 20px 0;
     text-align: center;
-    background-image: url(../images/Art%20splotches.jpg);
+    background-image: url(../images/Oil%20Pastel.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 200px;
