--- a/styles/index.css
+++ b/styles/index.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background: rgb(252, 240, 244);
+    background: white;
     font-family: 'Handlee', cursive;
     color: rgb(65, 43, 61);
 }
