--- a/styles/footer.css
+++ b/styles/footer.css
@@ -3,10 +3,10 @@ footer {
     width: 100%;
     position: fixed;
     bottom: 0;
-    background: linear-gradient(rgba(200, 150, 100, .1), rgb(250, 177, 193), rgb(250, 177, 193), rgb(250, 177, 193), rgb(250, 177, 193), rgb(250, 177, 193), rgb(250, 177, 193));
+    background: linear-gradient(rgba(200, 150, 100, .1), rgb(194, 0, 0), rgb(194, 0, 0), rgb(194, 0, 0), rgb(194, 0, 0), rgb(194, 0, 0), rgb(194, 0, 0));
     height: 90px;
     padding-top: 10px;
-    color: black;
+    color: white;
 }
 
 p {
