--- a/styles/preparation.css
+++ b/styles/preparation.css
@@ -12,9 +12,9 @@ body {
 main h1 {
     margin: 30px auto;
     text-align: center;
-    background: rgb(255, 156, 177);
+    background: rgb(194, 0, 0);
     border-radius: 7px;
-    color: rgb(252, 240, 244);
+    color: white;
 }
 
 div.grid-container {
